# learn-fastapi

./: pyproject.toml
basic/: database.py  main.py  myapi.db
basic/domain/question/: question_router.py
basic/migrations/versions/: 52a2751a70b8_.py
